PROTON-708: changed pn_driver_error to return the pn_error_t

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1632098 13f79535-47bb-0310-9956-ffa450edef68